--- a/src/components/bannerHome/bannerhome.css
+++ b/src/components/bannerHome/bannerhome.css
@@ -1,64 +1,108 @@
-  .panels {
-    min-height:50vh;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+.panels {
+    min-height: 50vh;
     overflow: hidden;
     display: flex;
-  }
-  .panel {
-    background:white;
-    box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
-    color:white;
+}
+
+.panel {
+    background: white;
+    box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
+    color: white;
     text-align: center;
-    align-items:center;
+    align-items: center;
     transition:
-      font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-      flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
-      background 0.2s;
+        font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+        flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+        background 0.2s;
     font-size: 15px;
-    background-size:cover;
-    background-position:center;
-    flex-grow: 1;
+    background-size: cover;
+    background-position: center;
+    flex: 1;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
-  }
-  .panel1 { background-image:url(./carrousel_3.jpg); }
-  .panel2 { background-image:url(./carrousel_1.jpg); }
-  .panel3 { background-image:url(./carrousel_2.jpg); }
-  .panel4 { background-image:url(./carrousel_4.png); }
-  .panel > * {
-    margin:0;
+}
+
+.panel1 {
+    background-image: url(./carrousel_3.jpg);
+}
+
+.panel2 {
+    background-image: url(./carrousel_1.jpg);
+}
+
+.panel3 {
+    background-image: url(./carrousel_2.jpg);
+}
+
+.panel4 {
+    background-image: url(./carrousel_4.png);
+}
+
+.panel>* {
+    margin: 0;
     width: 100%;
-    transition:transform 0.5s;
+    transition: transform 0.5s;
     flex-grow: 1 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .panel > *:first-child {
+}
+
+.panel>*:first-child {
     transform: translateY(-100%);
-  }
-  .panel > *:last-child {
+}
+
+.panel>*:last-child {
     transform: translateY(100%);
-  }
-  .panel.open-active > *:first-child,
-  .panel.open-active > *:last-child {
+}
+
+.panel.open-active>*:first-child,
+.panel.open-active>*:last-child {
     transform: translateY(0);
-  }
-  .panel p {
+}
+
+.panel p {
     text-transform: uppercase;
     font-family: 'Bitter', cursive;
-    text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
     font-size: 1em;
-  }
-  .panel p:nth-child(2) {
-    font-size: 4em;
-  }
-  .panel.open {
+}
+
+.panel p:nth-child(2) {
+    font-size: 3em;
+}
+
+.panel.open {
     flex: 5;
-    font-size: 40px;
-  }
-  .cta {
-    color:white;
+    font-size: 30px;
+}
+
+.cta {
+    color: white;
     text-decoration: none;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .panels{
+        height: 100vh;
+        flex-direction: column;
+    }
+    .panel p {
+        text-transform: uppercase;
+        font-family: 'Bitter', cursive;
+        text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+        font-size: 1em;
+    }
+    
+    .panel p:nth-child(2) {
+        font-size: 2em;
+    }
   }
