--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,30 +1,5 @@
-.bannerHero{
-    display: flex;
-    margin-bottom: 1rem;
-    max-width: 100vw;
-    height: 40vh;
-    background-image: url(../navbar/logo_emege.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
-.boxHeroContenedor{
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 1rem;
-    height: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
-.boxHero{
-    flex-basis: 70%;
-    align-self: center;
-    color: #000000
-}
 h1{
     font-size: 60px;
-}
-.callToAction{
-    align-items: center;
+    text-align: center;
 }
