--- a/src/components/bannerHome/bannerhome.css
+++ b/src/components/bannerHome/bannerhome.css
@@ -90,7 +90,7 @@
     text-decoration: none;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media only screen and  (max-device-width : 480px) {
     .panels{
         height: 100vh;
         flex-direction: column;
